keycloak/httpd/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /httpd
            pathType: Prefix
            backend:
              service:
                name: httpd-service
                port:
                  number: 8081
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
